#1 some intitial structures